Added color change when mousedown and mouseenter

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 
 .container{
-    background-color: black;
+    /*background-color: black;
     /*display: flex;
     flex-direction: row;
     flex-wrap: wrap;
