--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,20 @@
 
-
+body {
+    background-color: rgb(35, 35, 46);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
 .container{
-    /*background-color: black;
-    /*display: flex;
+    background-color: black;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    */
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 500px;
 }
 
-/*
-.content{
-    display:flex;
-}
