--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,22 @@ body {
     background-color: rgb(35, 35, 46);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    flex: 0 0 auto;
+    justify-content: flex-start;
     align-items: center;
-    /*
     width: 100vw;
     height: 100vh;
-    */
 }
+header{
+    color: yellow;
+    font-size: 50px;
+    margin: 60px;
+}
+.main{
+    display:flex;
+    flex-direction: row;
+}
+
 .container{
     background-color: black;
     display: flex;
@@ -20,15 +29,32 @@ body {
     width: 700px;
     height: 700px;
 }
-.color{
+
+.ui {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 20px;
+    gap: 10px;
+}
+
+.sizeButton{
+    padding: 0px;
+    margin: 0px;
+    width: 50%;
+
+
+}
+.colorContainer{
+    
     display: flex;
     flex-direction: row;
+    align-items: center;
+    gap: 10px;
 }
-/*
-.colored {
-    background-color: black;
-}
-*/
-button {
-    margin: 50px;
+
+.currentColor{
+    width: 64px;
+    height: 64px;
 }
