--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ header{
 }
 
 .container{
-    background-color: black;
+    background-color: rgb(32, 32, 32);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -28,6 +28,8 @@ header{
     align-items: center;
     width: 700px;
     height: 700px;
+    position: relative;
+    box-shadow: 0, 0, 10px, 10px, rgba(173, 173, 173, 0.8);
 }
 
 .ui {
